tests/baselines/reference/higherKindedTypesLift3.errors.txt
tests/cases/compiler/higherKindedTypesLift3.ts(15,26): error TS2345: Argument of type 'StaticFunctor<T[]>' is not assignable to parameter of type 'StaticFunctor<C>'.
  Types of parameters 'csas' and 'csas' are incompatible.
    Type 'C' is not assignable to type 'AS[]'.


==== tests/cases/compiler/higherKindedTypesLift3.ts (1 errors) ====
    interface StaticFunctor<CS<_TS>> {
        <AS, BS>(csas: CS<AS>, fmapstatic: (a: AS) => BS): CS<BS>;
    }
    
    
    interface LiftedResult<LC<_LT>> {
        <LA, LB>(lmap: (a: LA) => LB): (a: LC<LA>) => LC<LB>;
    }
    
    declare function lift<C<_T>>(fToLift: StaticFunctor<C>): LiftedResult<C>
    
    
    declare const myArrayFunctor: StaticFunctor<Array>
    
    const liftedArray = lift(myArrayFunctor);
                             ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'StaticFunctor<T[]>' is not assignable to parameter of type 'StaticFunctor<C>'.
!!! error TS2345:   Types of parameters 'csas' and 'csas' are incompatible.
!!! error TS2345:     Type 'C' is not assignable to type 'AS[]'.
    
    declare function stringLength(strarg: string): number
    
    const liftedStringLength = liftedArray(stringLength);
    
    declare const arrayOfStrings: Array<string>;
    
    const result = liftedStringLength(arrayOfStrings);
    const expectedType: Array<number> = result;
    
    const expectError = liftedStringLength(result)
    
    